--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,10 +46,11 @@ jobs:
           if [ ! -f tests/__init__.py ]; then echo "tests/__init__.py not found"; exit 1; fi
 
       - name: Run unit tests
+        env:
+          PYTHONPATH: $(pwd)/src
         run: |
-          python -m unittest discover -s $(pwd)/tests
+          python -m unittest discover -s tests
 
-      - name: Tear down Docker Compose services
-        run: |
-          docker-compose down
+      - name: Tear down Docke
+
 
