--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,4 +17,41 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-     
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Verify requirements file
+        run: |
+          if [ ! -f requirements.txt ]; then echo "requirements.txt not found"; exit 1; fi
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Build and run Docker Compose services
+        run: |
+          docker-compose up -d --build
+
+      - name: Verify tests directory
+        run: |
+          if [ ! -d tests ]; then echo "tests directory not found"; exit 1; fi
+          if [ ! -f tests/__init__.py ]; then echo "tests/__init__.py not found"; exit 1; fi
+
+      - name: Run unit tests
+        env:
+          PYTHONPATH: $(pwd)/src
+        run: |
+          python -m unittest discover -s tests
+
+      - name: Tear down Docker Compose services
+        run: |
+          docker-compose down
+
